# Mimirion

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.md.enhanced  vcpkg.json
docs/: github_integration.md
docs/images/: architecture.puml
examples/: basic_usage.cpp  github_example.cpp
include/: commit.hpp  diff.hpp  file_tracker.hpp  github_api.hpp  mainpage.dox  remote.hpp  repository.hpp  utils.hpp
scripts/: build_with_vcpkg.sh  setup_github.sh
src/: commit.cpp  diff.cpp  file_tracker.cpp  github_api.cpp  main.cpp  remote.cpp  repository.cpp  repository.cpp.temp  utils.cpp
tests/: CMakeLists.txt  integration_tests.cpp  test_commit.cpp  test_diff.cpp  test_file_tracker.cpp  test_main.cpp  test_remote.cpp  test_repository.cpp  test_utils.cpp
